Add support for decoupled HDFS